--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div>
       <img src="./assets/banner.jpg" alt="">
       <div class="title">
-        <h2>Nguyễn Văn A</h2>
+        <h2>Nguyễn Văn B</h2>
         <span>Full stack developer</span>
       </div>
     </div>
